Test empty filter return in CurationTaskDaoAutowireTest