@@ -529,8 +529,8 @@ class CurationTaskDaoAutowireTest {
 
         // call under test
         List<TaskBundle> bundles = dao.getCurationTaskBundles(
-                List.of(KeyFactory.stringToKey(project1.getId())),
-                null, null, null, 10, 0);
+                Collections.emptyList(),
+                null, null, List.of(created1.getTaskId(), created2.getTaskId()), 10, 0);
 
         assertEquals(2, bundles.size());
         assertEquals(created1.getTaskId(), bundles.get(0).getTask().getTaskId());
@@ -663,6 +663,16 @@ class CurationTaskDaoAutowireTest {
             dao.deleteCurationTask(task1.getTaskId());
             dao.deleteCurationTask(task2.getTaskId());
         }
+    }
+
+    @Test
+    public void testGetCurationTaskBundlesReturnsZeroResultsForNonExistentTaskId() {
+        // call under test - filter by non-existent taskId
+        List<TaskBundle> bundles = dao.getCurationTaskBundles(
+                Collections.emptyList(),
+                null, null, List.of(999999999L), 10, 0);
+
+        assertEquals(0, bundles.size());
     }
 
     @Test
